<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/habit_info_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorMaterialGreen">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/habit_info_fragment_delete_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/delete_button_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/habit_info_fragment_save_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/save_button_selector"/>

        </LinearLayout>

        <EditText
            android:id="@+id/habit_info_fragment_habit_name_text_view_edit_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/habit_title"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:layout_marginTop="24dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/habit_info_color_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/habit_info_color_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/color_choice"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <View
                android:id="@+id/habit_info_chosen_color"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@color/colorMaterialGreen"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/habit_time_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pick_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/remind" />

            <TextView
                android:id="@+id/habit_picked_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/habit_info_fragment_cancel_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_alarm"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</LinearLayout>