<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/step_creation_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/colorMaterialGreen"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/step_creation_fragment_back_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/back_button_selector"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/step_creation_fragment_create_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/create_button_selector" />

        </LinearLayout>

        <EditText
            android:id="@+id/step_creation_fragment_step_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/step_title"
            android:background="@android:color/transparent"
            android:layout_marginTop="17dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <EditText
            android:id="@+id/step_creation_fragment_step_description_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:background="@android:color/transparent"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:id="@+id/step_creation_color_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/step_creation_color_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/color_choice"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <View
                android:id="@+id/step_creation_chosen_color"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@color/colorMaterialGreen"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="5dp"/>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>