<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/habit_creation_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMaterialGreen"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/habit_creation_fragment_cancel_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_arrow_back"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@+id/habit_creation_fragment_enter_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_create_black_24dp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/habit_creation_fragment_habit_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:textSize="16sp"
            android:hint="@string/title"
            android:inputType="text"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/habit_creation_color_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/habit_creation_color_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/color_choice"
                android:inputType="textPersonName"
                android:textSize="16sp"
                android:layout_weight="1"/>

            <View
                android:id="@+id/habit_creation_chosen_color"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:background="@color/colorMaterialGreen"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/habit_time_picker_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/habit_creation_pick_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/remind"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/habit_creation_picked_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/habit_creation_fragment_cancel_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_alarm"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</LinearLayout>